# celery-logging-test

./: README.md  log_config.yaml  log_utils.py  main.py  pyproject.toml  tasks.py  work.py
test/: print_log.py
