[tool.poetry]
name = "celery-logging-test"
version = "0.0.1"
description = "test celery logging"
authors = ["chengxiaoy <chengyingjuly@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
celery = "^5.4.0"
pyyaml = "^6.0.2"
redis = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
